--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@ body {
   display: block;
   text-align: right;
 }
+h1 {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .aaa img {
   width: 100%;
 }
@@ -43,6 +55,9 @@ li,
 h3 {
   list-style: none;
 }
+h2 {
+  list-style: none;
+}
 input,
 button{
   outline: none;
@@ -60,8 +75,8 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+h2,
+h3[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +102,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+h3[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
